<resources>
    <string name="app_name">UniversityApp</string>
    <string name="hello">Hello world!</string>
    <string name="enter_login">Enter login</string>
    <string name="enter_password">Enter password</string>
    <string name="login_button">Login</string>
    <string name="title_activity_logged">LoggedActivity</string>
    <string name="title_book_list">Book list</string>
    <string name="title_selected_book">Selected book</string>
    <string name="title_fav_books">Favourite books</string>
    <string-array name="logins">
        <item>login1</item>
        <item>login2</item>
        <item>login3</item>
        <item>login4</item>
        <item>login5</item>
    </string-array>
    <string-array name="passwords">
        <item>pass1</item>
        <item>pass2</item>
        <item>pass3</item>
        <item>pass4</item>
        <item>pass5</item>
    </string-array>
</resources>